Removed Student Activity and made the Setting Activity to open only once

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -571,9 +571,8 @@
         <activity android:name=".RoomActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".TeacherActivity" />
-        <activity android:name=".StudentActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Settings">
+        <activity android:name=".Settings" />
+        <activity android:name=".MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
